test/neg/hex00.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##1 Int)(b Int)(a Int)) (=> (and (= a 8) (and (= b 7) (= _VV##1 (+ a b)))) (= _VV##1 12))))

